# kopete-xfire

./: CMakeLists.txt  README  kopete-xfire.files  kopete-xfire.includes  kopete-xfire.kdev4
libxfire/: XfireAttribute.cpp  XfireAttribute.h  XfirePacket.cpp  XfirePacket.h  XfirePeerToPeerPacket.cpp  XfirePeerToPeerPacket.h  XfireTypes.cpp  XfireTypes.h
src/: kopete_xfire.desktop  xf_account.cpp  xf_account.h  xf_add_contact.cpp  xf_add_contact.h  xf_contact.cpp  xf_contact.h  xf_edit_account.cpp  xf_edit_account.h  xf_game_detection.cpp  xf_game_detection.h  xf_games_list.cpp  xf_games_list.h  xf_games_manager.cpp  xf_games_manager.h  xf_p2p.cpp  xf_p2p.h  xf_p2p_filetransfer.cpp  xf_p2p_filetransfer.h  xf_p2p_natcheck.cpp  xf_p2p_natcheck.h  xf_p2p_session.cpp  xf_p2p_session.h  xf_protocol.cpp  xf_protocol.h  xf_server.cpp  xf_server.h
ui/: .directory  add_contact.ui  edit_account.ui  edit_games.ui  ui_add_contact.h  ui_edit_account.h  ui_edit_games.h
